fix(theme-base10,base10): add label to navigation buttons to make them more visible

--- a/profiles/theme-base10/resources/css/controls.css
+++ b/profiles/theme-base10/resources/css/controls.css
@@ -280,6 +280,15 @@ pb-link .btn.accent a {
     justify-content: center;
 }
 
+[role="group"] pb-navigation {
+    width: auto;
+}
+
+[role="group"]:has(pb-navigation > span+svg),
+[role="group"]:has(pb-navigation > svg+span) {
+    gap: 0.75rem;
+}
+
 button.icon svg, .dropdown-button summary svg, [role="group"] svg, button svg, .btn svg {
     width: 1rem;
     height: 1rem;
